[package]
edition = "2021"
name = "table_controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "/home/flurin/_source/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "/home/flurin/_source/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "/home/flurin/_source/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "/home/flurin/_source/embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-net = { version = "0.4.0", path = "/home/flurin/_source/embassy/embassy-net", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
cyw43 = { path = "/home/flurin/_source/embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "/home/flurin/_source/embassy/cyw43-pio", features = ["defmt", "overclock"] }

defmt = "0.3.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.7.16"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.6", features = ["critical-section"] }

[profile.release]
debug = 2
